--- a/starter/src/index.css
+++ b/starter/src/index.css
@@ -5,7 +5,7 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: lightblue !important;
+	background-color: rgb(33, 44, 48) !important;
 }
 
 code {
